--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -13,7 +13,13 @@
 <% include parts/_header %>
 
 <div class="wrapper">
-
+  <div class="main_area">
+    <div class="inner">
+      <span>今なら限定キャンペーン中！</span>
+      <h2>手間いらずのダイエット♡<br>『Beautyフォルスコリー235』ラクしてメリハリボディに！</h2>
+      <p>痩せやすい体にする為の燃焼サポート成分「フォルスコリー」や、美容成分の「コラーゲン」「プラセンタ」、さらに女性ホルモンの分泌を促進する「プエラリア」を配合！ただ痩せるのではなく、魅力的なメリハリボディにしてくれるのです♡</p>
+    </div>
+  </div>
 </div><!-- /.wrapper -->
 
 <% include parts/_footer %>
