レスポンシブ対応

--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -16,9 +16,9 @@
 
   <div class="main_area">
     <div class="inner">
-      <span>今なら限定キャンペーン中！</span>
+      <span class="border">今なら限定キャンペーン中！</span>
       <h2>手間いらずのダイエット♡<br>『Beautyフォルスコリー235』ラクしてメリハリボディに！</h2>
-      <p>痩せやすい体にする為の燃焼サポート成分「フォルスコリー」や、美容成分の「コラーゲン」「プラセンタ」、さらに女性ホルモンの分泌を促進する「プエラリア」を配合！ただ痩せるのではなく、魅力的なメリハリボディにしてくれるのです♡</p>
+      <p>痩せやすい体にする為の燃焼サポート成分「フォルスコリー」や、<span class="block">美容成分の「コラーゲン」「プラセンタ」、</span><span class="block">さらに女性ホルモンの分泌を促進する「プエラリア」を配合！ただ痩せるのではなく、</span><span class="block">魅力的なメリハリボディにしてくれるのです♡</span></p>
     </div>
   </div>
 
@@ -26,7 +26,8 @@
 
     <div class="aside_content">
     <div class="course">
-      <p><img src="./assets/images/lnav_img_01.png" alt=""></p>
+      <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
+      <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
       <div class="link-btn">
         <a href="#">
           今すぐモニターになる♪
@@ -142,9 +143,6 @@
 
   </div><!-- /.container -->
 </div><!-- /.wrapper -->
-
-<script src="/assets/js/lib/jquery-2.1.3.min.js"></script>
-<script src="/assets/js/app.js"></script>
 
 </body>
 </html>
