--- a/_dev/ejs/parts/_mailForm.ejs
+++ b/_dev/ejs/parts/_mailForm.ejs
@@ -134,7 +134,7 @@
                                 <tbody><tr class="odd">
           <th>お名前<span class="hissu">必須</span></th>
             <td>
-                姓 <input type="text" name="family_name" value="" placeholder="例）鈴木" style="background: rgb(220, 220, 220);">　名 <input type="text" name="given_name" value="" placeholder="例）太郎" style="background: rgb(220, 220, 220);">
+                姓 <input type="text" name="family_name" value="" placeholder="例）鈴木" style="background: rgb(220, 220, 220);">　<span>名 <input type="text" name="given_name" value="" placeholder="例）太郎" style="background: rgb(220, 220, 220);"></span>
             </td>
         </tr>
 
@@ -145,7 +145,7 @@
                                  <tr class="even">
             <th>フリガナ<span class="hissu">必須</span></th>
             <td>
-                セイ <input type="text" name="family_name_kana" value="" placeholder="例）スズキ" style="background: rgb(220, 220, 220);">　メイ <input type="text" name="given_name_kana" value="" placeholder="例）タロウ" style="background: rgb(220, 220, 220);">
+                セイ <input type="text" name="family_name_kana" value="" placeholder="例）スズキ" style="background: rgb(220, 220, 220);">　<span>メイ <input type="text" name="given_name_kana" value="" placeholder="例）タロウ" style="background: rgb(220, 220, 220);"></span>
             </td>
         </tr>
 
@@ -700,8 +700,8 @@
 
           <!-----------ここから申込みボタン----------->
         <tr class="even">
-            <td colspan="2" style="text-align:center;">
-                <img src="/themes/simple_02/p/images/form_btn.png" onmouseover="this.src='/themes/simple_02/p/images/form_btn_on.png'" onmouseout="this.src='/themes/simple_02/p/images/form_btn.png'" name="sub" value="申し込む" id="sub">
+            <td class="submit-btn" colspan="2" style="text-align:center;">
+                <img src="assets/images/form_btn.png" onmouseover="this.src='assets/images/form_btn_on.png'" onmouseout="this.src='assets/images/form_btn.png'" name="sub" value="申し込む" id="sub">
             </td>
         </tr>
           <!-----------ここまで申込みボタン----------->
