--- a/_dev/ejs/parts/_head.ejs
+++ b/_dev/ejs/parts/_head.ejs
@@ -10,3 +10,5 @@
 <![endif]-->
 <!-- Style sheet link -->
 <link href="./assets/css/style.css" rel="stylesheet" media="all">
+<script src="/assets/js/lib/jquery-2.1.3.min.js"></script>
+<script src="/assets/js/app.js"></script>
