--- a/htdocs/assets/css/style.css
+++ b/htdocs/assets/css/style.css
@@ -102,7 +102,7 @@ img {
   color: #00702d;
 }
 
-.main_area .inner span {
+.main_area .inner span.border {
   border: 1px solid #00702d;
   padding: 3px;
 }
@@ -121,16 +121,16 @@ img {
 .container {
   overflow: hidden;
   zoom: 1;
-  width: 1014px;
+  width: 1034px;
   margin: 0 auto;
   line-height: 1.6em;
   position: relative;
-  padding: 0 20px;
+  padding: 0 0 20px;
 }
 
 .container .main_content {
   float: left;
-  width: 674px;
+  width: 66.5%;
 }
 
 .container .main_content section {
@@ -193,13 +193,13 @@ img {
 .container .main_content ul {
   overflow: hidden;
   zoom: 1;
-  width: 621px;
+  width: 92.1%;
   margin: 0 auto;
 }
 
 .container .main_content ul li {
   float: left;
-  width: 207px;
+  width: 33.3%;
 }
 
 .container .main_content ul li .text {
@@ -213,7 +213,12 @@ img {
 
 .container .aside_content {
   float: right;
-  width: 300px;
+  width: 30%;
+  margin-right: 20px;
+}
+
+.container .aside_content img {
+  width: 100%;
 }
 
 .container .aside_content .course {
@@ -221,7 +226,7 @@ img {
 }
 
 .container .aside_content .course .link-btn {
-  width: 267px;
+  width: 94%;
   margin: 0 auto 8px;
 }
 
@@ -309,6 +314,232 @@ img {
   padding: 2px 3px;
 }
 
-/*--------------
-	footer
---------------*/
+@media screen and (max-width: 1200px) {
+  .main_area {
+    width: 100%;
+    height: auto;
+    background: #e4ffe1;
+    margin-bottom: 15px;
+  }
+  .main_area .inner {
+    width: 80%;
+    height: auto;
+    margin: 0 auto;
+    padding: 30px 0 30px 400px;
+    background: url(../images/main_img_00.png) no-repeat left center;
+    background-size: contain;
+    color: #00702d;
+  }
+  .main_area .inner span.border {
+    border: 1px solid #00702d;
+    padding: 3px;
+  }
+  .main_area .inner span.block {
+    display: block;
+  }
+  .main_area .inner h2 {
+    font-weight: bold;
+    font-size: 18px;
+    margin: 13px 0 8px;
+    line-height: 1.5em;
+  }
+  .main_area .inner p {
+    font-size: 12px;
+    line-height: 1.5em;
+  }
+  .container {
+    width: 90%;
+  }
+  .container img {
+    width: 100%;
+  }
+  .container #teiki1 {
+    width: 100%;
+    margin: 0 auto;
+    font-size: 14px;
+    text-align: left;
+  }
+  .container .form_ttl {
+    margin: 25px 0 0px;
+    font-weight: bold;
+    color: #fff;
+    font-size: 17px;
+    text-align: left;
+    padding: 8px;
+  }
+  .container #itemselect, .container .mgnt20, .container .mgnt10 {
+    width: 100%;
+  }
+  .container #teiki1 th {
+    padding: 12px 2% 12px 2%;
+    width: 28%;
+    vertical-align: top;
+  }
+  .container #teiki1 td {
+    vertical-align: top;
+    padding: 12px 2% 12px 2%;
+    color: #222;
+    width: 64%;
+  }
+  .container #teiki1 td span {
+    display: block;
+  }
+  .container #teiki1 td span.small_txt {
+    font-size: 12px;
+  }
+  .container #teiki1 td textarea {
+    width: 90%;
+    border: 1px solid #ccc;
+  }
+  .container #itemselect, .container .mgnt20, .container .mgnt10 {
+    margin-bottom: 25px;
+  }
+  .container .hissu {
+    font-size: 12px;
+    float: right;
+    margin-right: 5px;
+    padding: 2px 3px;
+  }
+  .container .submit-btn img {
+    width: 100px;
+    height: 25px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .pc_view {
+    display: none !important;
+  }
+  .sp_view {
+    display: block !important;
+  }
+  .main_area {
+    height: auto;
+    padding: 30px 3%;
+    box-sizing: border-box;
+  }
+  .main_area .inner {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    padding: 0;
+    background: none;
+  }
+  .main_area .inner h2 {
+    font-size: 18px;
+  }
+  .main_area .inner p {
+    font-size: 12px;
+  }
+  .container {
+    overflow: hidden;
+    zoom: 1;
+    width: 100%;
+    margin: 0 auto;
+    line-height: 1.6em;
+    position: relative;
+    padding: 0 0 20px;
+  }
+  .container .main_content {
+    float: none;
+    width: 94%;
+    margin: 0 auto;
+    font-size: 12px;
+  }
+  .container .main_content section {
+    margin-bottom: 30px;
+  }
+  .container .main_content h3 {
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 5px;
+    margin-bottom: 25px;
+  }
+  .container .main_content h3.mb10 {
+    margin-bottom: 10px;
+  }
+  .container .main_content h4 {
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  .container .main_content p {
+    margin-bottom: 20px;
+  }
+  .container .main_content p.image {
+    text-align: center;
+  }
+  .container .main_content p.strong {
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+  .container .main_content .element_list p {
+    margin-bottom: 0;
+  }
+  .container .main_content .link a {
+    display: block;
+    border: 1px solid #e7e7e7;
+    background: #f8f8f8;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 10px;
+  }
+  .container .main_content .link a:after {
+    content: ">";
+    font-size: 18px;
+    float: right;
+    padding-right: 15px;
+    line-height: 1em;
+  }
+  .container .main_content .link a:hover {
+    text-decoration: none;
+  }
+  .container .main_content ul {
+    overflow: hidden;
+    zoom: 1;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .container .main_content ul li {
+    float: none;
+    width: 100%;
+    margin-bottom: 40px;
+  }
+  .container .main_content ul li .text {
+    padding-right: 0px;
+  }
+  .container .main_content ul li .text strong {
+    font-weight: bold;
+    display: block;
+  }
+  .container .aside_content {
+    float: none;
+    width: 94%;
+    margin: 0 auto 20px;
+    position: relative !important;
+    top: auto !important;
+  }
+  .container .aside_content img {
+    width: 100%;
+  }
+  .container .aside_content .course {
+    border: 5px solid #006e1d;
+  }
+  .container .aside_content .course .link-btn {
+    width: 94%;
+    margin: 0 auto 8px;
+  }
+  .container .aside_content .course .link-btn a {
+    display: block;
+    background: #ff4c00;
+    color: #fff;
+    font-size: 17px;
+    text-align: center;
+    padding: 10px 0;
+  }
+  .container .aside_content .course .link-btn a:hover {
+    text-decoration: none;
+  }
+  .container .aside_content .bnr {
+    margin-top: 9px;
+  }
+}
