Locariページ実装途中

--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 
-<% var title = "Beautyフォルスコリー235"; %>
+<% var title = "Locari"; %>
 <% var keywords = ""; %>
 <% var description = ""; %>
 <% include parts/_head %>
@@ -16,125 +16,107 @@
 
   <div class="main_area">
     <div class="inner">
-      <span class="border">今なら限定キャンペーン中！</span>
-      <h2>手間いらずのダイエット♡<br>『Beautyフォルスコリー235』ラクしてメリハリボディに！</h2>
-      <p>痩せやすい体にする為の燃焼サポート成分「フォルスコリー」や、<span class="block">美容成分の「コラーゲン」「プラセンタ」、</span><span class="block">さらに女性ホルモンの分泌を促進する「プエラリア」を配合！ただ痩せるのではなく、</span><span class="block">魅力的なメリハリボディにしてくれるのです♡</span></p>
+      <span class="border">お試しモニター募集中！</span>
+      <h2>クレンジングバームですっぴん美人♡<br>ゴワゴワ乾燥肌からつっぱらないもちもち肌に！</h2>
+      <p>毎日スキンケアをしていても、なんだか化粧ノリがぱっとしない…そんなお悩みはメイクの汚れが原因の場合も…。溜まった汚れや皮脂をしっかり洗い落とし、さらにはりのある肌に♡<br>両方を実感できる大人気のクレンジングバーム！今ならお手軽に試せます！</p>
     </div>
   </div>
 
   <div class="container">
 
     <div class="aside_content">
-    <div class="course">
-      <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
-      <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
-      <div class="link-btn">
-        <a href="#">
-          今すぐモニターになる♪
-        </a>
-      </div>
-    </div>
-    <p class="bnr"><a href="#"><img src="./assets/images/lnav_img_02.png" alt="まずはお試し単品購入"></a></p>
+        <div class="course">
+          <p class="pc_view"><img src="./assets/images/lnav_img_01.png" alt=""></p>
+          <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
+          <div class="link-btn">
+            <a href="#">
+              今すぐモニターになる♪
+            </a>
+          </div>
+        </div>
     </div>
 
     <div class="main_content">
 
       <section>
-        <h3>人気モデルやセレブでも話題の『Beautyフォルスコリー235』</h3>
-        <p>モデルや海外セレブの間でも話題の『Beautyフォルスコリー235』。流行に敏感なセレブやモデルの間で、手軽でおいしくできるダイエットとして、超話題になっているようです。</p>
+        <h3>スキンケアに本当に必要なものは「クレンジング」</h3>
         <p class="image"><img src="./assets/images/main_img_01.png" alt=""></p>
-        <p>ミランダ・カーをはじめとした海外セレブが実践しているダイエット法として海外セレブ系の人気雑誌「GLITTER」8月号に掲載されています。</p>
+      </section>
+
+      <section>
+        <h4>なんと150万個売れた "D.U.O. ザ クレンジングバーム"で内側から美肌に！</h4>
+        <p>毛穴の汚れや皮脂のせいで、メイクがなぜかパッとしない…。<br>だからこそ、メイクもしっかり落としながら、肌に美容成分を与えるのがクレンジングバームです♡</p>
         <p class="image"><img src="./assets/images/main_img_02.png" alt=""></p>
-        <p>伊東亜利沙さんや森下まいさんなど、人気モデルもフォルスコリーを愛飲しています！ブログで話題となり、美容や流行に敏感な人たちの間で人気急上昇中なんです。</p>
+        <h4>これ1つで5役♡さらに３つの特徴で楽してキレイになれる！</h4>
+        <p>一度使ったらやめらなれないのがクレンジングバーム。「クレンジング」「洗顔」「角質ケア」「マッサージ」「トリートメント」の機能がこの中に。</p>
+        <p>さらに「W洗顔不要」「31種類の美容成分」「無添加仕立て」。500円とは思えない魅力がたっぷりと詰まっています。</p>
         <div class="link">
-          <a href="#">セレブも注目のフォルスコリー♡とりあえず試したい♡</a>
+          <a href="#">あなたも美肌の魔法にかかる？すぐにお試しできます♡</a>
         </div>
       </section>
 
       <section>
-        <h3>我慢なし♡簡単にラクして痩せられる</h3>
-        <h4>食べたいものを我慢しない！運動もしない！時間がなくても大丈夫だから、続けられます！</h4>
-        <p>『Beautyフォルスコリー235』がここまで流行っているのは、ズバリ「ラクしてメリハリボディに！」なれること。我慢したり、面倒なカロリー計算、運動があるとどうしても続かないのがダイエット。栄養もバッチリで安心して続けられます。</p>
+        <h3>汚れは落としても肌に必要な油分と水分は落とさない</h3>
+        <h4>落とすだけじゃない！美容液成分をプラスしたポジティブクレンジングが大切♡</h4>
+        <p>あたりまでだと持っている「さっぱりクレンジング」肌に大切なうるおいまで洗い流していませんか？洗うたびに肌環境がマイナスになり、せっかくの美容液の効果が無駄に…。</p>
         <p class="image"><img src="./assets/images/main_img_03.png" alt=""></p>
-        <h3 class="mb10">今までのスムージーとは、ここが違う！４つのポイント</h3>
-        <h4>POINT１　235種類の酵素を配合！</h4>
-        <p>酵素は新陳代謝に関わる成分です。これが減少してしまうと痩せにくい体に！『Beautyフォルスコリー235』は実績のある「野菜」「果物」「植物」「穀物」の酵素がたっぷり！栄養分も補えます。</p>
-        <h4>POINT２　「フォルスコリ」で甘いものも我慢しなくて大丈夫！</h4>
-        <p>糖分の吸収を制限するシソ科の植物「フォルスコリ」で、ダイエットの無理なストレスからあなたを解放してくれます。</p>
+      </section>
+
+      <section>
+        <h3>３つの美容効果をもたらす「毛穴クリアカプセル」♡</h3>
+        <p>クレンジングバームには独自の「毛穴クリアカプセル」がはいっています。肌に優しい成分がしっかりよごれを落としながら、栄養を与え、さらに角質までケア！</p>
+        <h4>POINT１　落としすぎない</h4>
+        <p>肌に刺激がすくない、やさしい洗浄成分がメイクや毛穴の汚れをうかせて落とします</p>
+        <h4>POINT２　肌に栄養をあたえる</h4>
+        <p>ナノコラーゲン、ナノヒアルロン酸、ナノセラミドの3大美容成分をはじめ、保湿とエイジングケアに最適な天然植物エキスとビタミンC、Eを高配合。贅沢な31種類のエイジングケア成分が入っています。</p>
+        <h4>POINT3　透明感のある肌へ</h4>
+        <p>毛穴クリアカプセルのカプセルは伸縮性に優れソフトスクラブ効果をはっき。毛穴の奥の汚れや古い角質をやさしく取り除き、透明感のある肌へ導きます。</p>
         <p class="image"><img src="./assets/images/main_img_04.png" alt=""></p>
-        <h4>POINT3　コラーゲン・プラセンタの美容成分も配合</h4>
-        <p>美肌に欠かせない「コラーゲン」。コラーゲンの増加を促進してくれる「プラセンタ」で、もちもちのお肌に。</p>
-        <h4>POINT4　「プエラリア」でバストアップ！</h4>
-        <p>女性ホルモンの分泌を促進する効果があると注目されている「プエラリア」。単にやせるだけでなく、お肌が綺麗に、バストアップもできてメリハリボディを目指せます。</p>
-        <p class="image"><img src="./assets/images/main_img_05.png" alt=""></p>
+        <p>もちろん、肌にやさしい無添加仕立て、ハリ・ツヤあふれる若々しいすっぴん美人へあなたを導きます。</p>
         <div class="link">
-          <a href="#">健康的なメリハリボディになりたい！</a>
+          <a href="#">シルクみたいなスルスルの肌に♡お得にお試しできます</a>
         </div>
       </section>
 
       <section>
-        <h3>苦味なしの柑橘系の爽やかな香り！一杯あたり17円でできます。</h3>
-        <p>グリーンスムージにありがちな「カロリー」「味」「お金」の心配。『Beautyフォルスコリー235』はそんな心配をすべて解決してくれます。</p>
+        <h3>D.U.O.の実力の効果は？</h3>
+        <p>べっとりとついた口紅が、少量のバームでとろとろに広がり、くすみや汚れを落とします。透明感あふれるもちもち肌に。…。</p>
+        <p class="image"><img src="./assets/images/main_img_05.png" alt=""></p>
+        <p>ずっと触っていたくなるような肌に、すっぴんに自信がつくこと間違いなし。</p>
+        <div class="link">
+          <a href="#">この効果！お試しあれ！</a>
+        </div>
+      </section>
+
+      <section>
+        <h3>クレンジングでポジティブに変身！</h3>
+        <h4>美容液で洗っているかのような感覚。門多初恵さん（30歳）</h4>
+        <p>もともと敏感肌で自分の肌にあうクレンジングを色々試して探していたところ、たまたまある読者モデルの方のブログでD.U.O.のクレンジングを知りました。<br>興味本位で注文してみたところ<span class="strong">口コミ以上の効果をすぐに実感。</span><br>今までのクレンジングにないクリームでもなくオイルでもなくジェルでもない形状ですが洗っている間は美容液で洗っているかのような感覚、でも<span class="strong">汚れはしっかり落ちて</span>いて、<span class="strong">洗い上がりもしっとり、</span>でも次の化粧水や美容液を邪魔しない状態に肌をリセットしてくれます。<br>すぐに貴社への信頼が高まりラインで商品を注文しました。<br>美容液、化粧水も加えラインで使うようになってから<span class="strong">肌が安定、仕事で夜遅い日が続いても荒れにくくなりました。</span>また毛穴が目立ちにくくなり、乾燥もなくなって肌にハリがでたような気がします。</p>
+        <p class="image"><img src="./assets/images/main_img_06.png" alt=""></p>
+      </section>
+
+      <section>
+        <h3>ながらクレンジングOK♡やさしくマッサージするようにオフ</h3>
         <ul>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_01.png" alt=""></p>
-            <p class="text">
-              <strong>まずはプレーンで♪</strong>
-              青汁なのに美味しくて飲みやすいうえ、栄養もたっぷりだから忙しい時などはこのままで十分楽しめます！サッと簡単に飲めるので朝食の代わりにするのもおススメ！
-            </p>
+            <p class="image"><img src="./assets/images/main_img_07_01.png" alt=""></p>
+            <p class="text">クレンジングバームをスプーン１杯分、乾いた手にのせます。</p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_02.png" alt=""></p>
-            <p class="text">
-              <strong>ヨーグルトと！</strong>
-              スムージーの甘みとヨーグルトの酸味が絶妙にマッチ！デザート感覚でおいしく食べられます！忙しい朝は特にオススメ！
-            </p>
+            <p class="image"><img src="./assets/images/main_img_07_02.png" alt=""></p>
+            <p class="text">やさしくお顔に馴染ませます。バームは垂れてこないので、ＴＶを見ながらでもご使用いただけます。</p>
           </li>
           <li>
-            <p class="image"><img src="./assets/images/main_img_06_03.png" alt=""></p>
-            <p class="text">
-              <strong>牛乳・豆乳と一緒に♪</strong>
-              スムージーがよりクリーミーになった優しい味わい！小腹がすいた時や夜食代わりなんかにもピッタリ♪
-            </p>
+            <p class="image"><img src="./assets/images/main_img_07_03.png" alt=""></p>
+            <p class="text">ぬるま湯で30秒程度、ゆっくりと洗い流します。</p>
           </li>
         </ul>
       </section>
 
       <section>
-        <p class="strong">実際に試した結果…（五位渕のぞみさん（30））</p>
-        <p>「Beautyフォルスコリー235」を約１ヶ月、試したところ嬉しい結果！！</p>
-        <p class="image"><img src="./assets/images/main_img_07.png" alt=""></p>
-        <p>タンブラーに入れて会社にも持ち運び、置き換えダイエットを実践したそうです。</p>
+        <h3>初回お試しモニター募集中</h3>
+        <p>お試しサイズ 7日分（20g）が、送料無料で（税別）500円で購入できます。今ならサンプルセットもついています。</p>
         <p class="image"><img src="./assets/images/main_img_08.png" alt=""></p>
-        <p class="strong">ウエスト4.8cmダウン！</p>
-        <p>見た目だけでもスッキリとしたのがわかります！ お腹ほっそり、ウエスト4.8センチダウン</p>
-        <p class="image"><img src="./assets/images/main_img_09.png" alt=""></p>
-        <p class="strong">体重なんと3.8kgダウン！</p>
-        <p>結果がなかなか出にくい太ももは0.7センチ！バストは0.8センチアップ！</p>
-        <div class="link">
-          <a href="#">健康的なメリハリボディはすぐそこに！</a>
-        </div>
-      </section>
-
-      <section class="element_list">
-        <h3>Beautyフォルスコリー235 -フォトケミカル入り-【全成分表示】</h3>
-        <dl>
-          <p>商品名：Beautyフォルスコリー235 -フォトケミカル入り-</p>
-        </dl>
-        <dl>
-          <p>内容量：180g</p>
-        </dl>
-        <dl>
-          <p>含有成分：ブドウ糖、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト、テキスト</p>
-        </dl>
-        <dl>
-          <p>販売者：株式会社リーフ</p>
-        </dl>
-      </section>
-
-      <section>
-        <h3>30日間全額返金保証！</h3>
-        <p>定期モニターコースを申込みされた方の初回購入分１箱に限り返金保証対象となります。<br>初回の商品ご到着から30日以内に、商品にご不満がございました場合ご返金します。</p>
       </section>
 
       <% include parts/_mailForm %>
